# swe-agent

./: .env.example  .gitignore  README.md  demo_mock.py  generate_pdf.py  pyproject.toml
scripts/: build.bat  install.bat  installer.iss
src/swe_agent/: __init__.py  __main__.py  cli.py  config.py  tui.py
src/swe_agent/agent/: __init__.py  loop.py  messages.py  prompts.py
src/swe_agent/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  openai_provider.py
src/swe_agent/tools/: __init__.py  base.py  fs.py  registry.py  search.py  shell.py
tests/: test_anthropic.py  test_llm.py  test_loop.py  test_tools.py
